--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   db:
     image: postgres:16
     container_name: crypto_calc_db
+    restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
