--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
 asgiref==3.8.1
-Django==5.2.3
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.0
-psycopg2-binary==2.9.10
-Pygments==2.19.1
-PyJWT==2.9.0
-sqlparse==0.5.3
-asgiref==3.8.1
-Django==5.2.3
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.0
-gunicorn==23.0.0
-packaging==25.0
-psycopg2-binary==2.9.10
-Pygments==2.19.1
-PyJWT==2.9.0
-sqlparse==0.5.3
-asgiref==3.8.1
 certifi==2025.6.15
 charset-normalizer==3.4.2
+contourpy==1.3.2
+cycler==0.12.1
 Django==5.2.3
+django-cors-headers==4.7.0
+django-extensions==4.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+fonttools==4.58.4
+greenlet==3.2.3
 gunicorn==23.0.0
 idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.3
+numpy==2.3.1
 packaging==25.0
+pandas==2.3.0
+pillow==11.2.1
 psycopg2-binary==2.9.10
 Pygments==2.19.1
 PyJWT==2.9.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.4
+six==1.17.0
+SQLAlchemy==2.0.41
 sqlparse==0.5.3
+typing_extensions==4.14.0
+tzdata==2025.2
 urllib3==2.5.0
