--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,56 @@
 asgiref==3.8.1
+backoff==2.2.1
+beautifulsoup4==4.13.5
 certifi==2025.6.15
 charset-normalizer==3.4.2
+click==8.2.1
 contourpy==1.3.2
 cycler==0.12.1
+decorator==5.2.1
 Django==5.2.3
 django-cors-headers==4.7.0
 django-extensions==4.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+filelock==3.19.1
 fonttools==4.58.4
 greenlet==3.2.3
 gunicorn==23.0.0
 idna==3.10
+iniconfig==2.1.0
+jmespath==1.0.1
+joblib==1.5.2
 kiwisolver==1.4.8
+loguru==0.7.3
+lxml==6.0.1
 matplotlib==3.10.3
+nltk==3.9.1
+ntscraper==0.4.0
 numpy==2.3.1
 packaging==25.0
 pandas==2.3.0
 pillow==11.2.1
+playwright==1.55.0
+pluggy==1.6.0
 psycopg2-binary==2.9.10
+pyee==13.0.0
 Pygments==2.19.1
 PyJWT==2.9.0
 pyparsing==3.2.3
+PySocks==1.7.1
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
+regex==2025.9.1
 requests==2.32.4
+scrapfly-sdk==0.8.23
 six==1.17.0
+snscrape==0.7.0.20230622
+soupsieve==2.8
 SQLAlchemy==2.0.41
 sqlparse==0.5.3
+textblob==0.19.0
+tqdm==4.67.1
 typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
